Implemented search functionality and temporary task addition on index page

--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
   },
   "keywords": [],
   "author": "ntduck",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
+  }
 }
